# xmd

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASING.md  SPEC-v0.0.1.md  SPEC-v0.0.2.md  SPEC-v0.0.3.md  pyproject.toml  setup.py
docs/: README.md  architecture.md  discussion-2026-05-30.md  vision.md
examples/: AGENT.xmd  PROJECT.xmd
runxmd/: __init__.py  agent.py  cli.py  parser.py
runxmd/plugins/: http.py  lang.py
tests/: conftest.py  test_core.py  test_extensions.py
xmd/: __init__.py  agent.py  cli.py  executor.py  memory.py
xmd/plugins/: __init__.py  base.py  fs.py  llm.py  shell.py
