[project]
name = "xmd"
version = "0.0.2"
description = "XMD — a runtime that executes documents. The document becomes the system."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Subham Divakar", email = "shubham.divakar@gmail.com" }]
license = { text = "MIT" }
keywords = ["xmd", "runtime", "documents", "agents", "markdown"]
dependencies = []  # stdlib only — zero dependencies by design

[project.scripts]
xmd = "xmd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xmd"]
