[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runxmd"
dynamic = ["version"]
description = "runxmd — a runtime that turns Markdown-like .xmd documents into running systems."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Subham Divakar", email = "shubham.divakar@gmail.com" }]
keywords = ["xmd", "runtime", "documents", "agents", "markdown", "workflow", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = []  # stdlib only — zero dependencies by design

[project.optional-dependencies]
test = ["pytest>=7"]  # dev-only; the runtime itself stays zero-dependency

[project.urls]
Homepage = "https://github.com/shubham10divakar/xmd"
Repository = "https://github.com/shubham10divakar/xmd"
Issues = "https://github.com/shubham10divakar/xmd/issues"

[project.scripts]
runxmd = "runxmd.cli:main"

[tool.setuptools.dynamic]
version = { attr = "runxmd.__version__" }

[tool.setuptools.packages.find]
include = ["runxmd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
